<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SeekBar
        android:id="@+id/seekBar1"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="113dp"
        android:max="100"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar3"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="150dp"
        android:max="100"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <SeekBar
        android:id="@+id/seekBar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="113dp"
        android:max="20"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/seekBar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="231dp"
        android:layout_height="25dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="20dp"
        android:text="@string/amount_when_opening_an_account"
        app:layout_constraintBottom_toTopOf="@+id/seekBar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="20dp"
        android:text="@string/for_how_long"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar1"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="158dp"
        android:layout_height="23dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="20dp"
        android:text="@string/monthly_replenishment"
        app:layout_constraintBottom_toTopOf="@+id/seekBar3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3"
        app:layout_constraintVertical_bias="0.077" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="465dp" />

    <TextView
        android:id="@+id/textViewS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_null"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_null"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewS3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/_null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

</androidx.constraintlayout.widget.ConstraintLayout>